Trip mate build

--- a/app.json
+++ b/app.json
@@ -1,36 +1,34 @@
 {
-  "expo": {
-    "name": "TravelCalculator",
-    "slug": "TravelCalculator",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      },
-      "package": "com.blah0524.TravelCalculator"
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    },
-    "extra": {
-      "eas": {
-        "projectId": "d006dffb-24f0-47c0-9d5c-2391cd7840fd"
-      }
-    }
-  }
+	"expo": {
+		"name": "Trip Mate",
+		"slug": "trip-mate",
+		"version": "1.0.0",
+		"orientation": "portrait",
+		"icon": "./assets/TripMate.png",
+		"userInterfaceStyle": "light",
+		"splash": {
+			"image": "./assets/splash.png",
+			"resizeMode": "contain",
+			"backgroundColor": "#ffffff"
+		},
+		"assetBundlePatterns": ["**/*"],
+		"ios": {
+			"supportsTablet": true
+		},
+		"android": {
+			"adaptiveIcon": {
+				"foregroundImage": "./assets/adaptive-icon.png",
+				"backgroundColor": "#ffffff"
+			},
+			"package": "com.blah0524.TravelCalculator"
+		},
+		"web": {
+			"favicon": "./assets/favicon.png"
+		},
+		"extra": {
+			"eas": {
+				"projectId": "d006dffb-24f0-47c0-9d5c-2391cd7840fd"
+			}
+		}
+	}
 }
