--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
 		"web": "expo start --web"
 	},
 	"dependencies": {
+		"@react-native-async-storage/async-storage": "^1.21.0",
 		"expo": "~49.0.15",
 		"expo-status-bar": "~1.6.0",
 		"react": "18.2.0",
 		"react-native": "0.72.6",
+		"react-native-safe-area-context": "4.6.3",
 		"react-native-screens": "v3.10.2",
-		"react-native-table-component": "github:slice312/react-native-table-component",
-		"react-native-safe-area-context": "4.6.3"
+		"react-native-table-component": "github:slice312/react-native-table-component"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.20.0"
