Last build before first publish

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
 	"expo": {
 		"name": "Splitwise",
-		"slug": "Splitwise",
+		"slug": "TravelCalculator",
 		"version": "1.0.0",
 		"orientation": "portrait",
 		"icon": "./assets/splitwise_icon.png",
